Changed lists in footer

--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@
           <p></p>
         </div>
         <div class="footer-nav__box">
-          <h3>Subscribe</h3>
+          <h3 class="nav-heder">Subscribe</h3>
           <nav class="footer-nav">
             <ul class="footer-nav__list">
               <li class="footer-nav__item"><a href="" class="item">home</a></li>
@@ -666,7 +666,7 @@
           </nav>
         </div>
         <div class="footer_nav_box">
-          <h3>Subscribe</h3>
+          <h3 class="nav-heder">Company</h3>
           <nav class="footer-nav">
             <ul class="footer-nav__list">
               <li class="footer-nav__item"><a href="" class="item">home</a></li>
@@ -679,33 +679,33 @@
         <div class="footer_info_box">
           <div class="footer_rigts_box">
             <p>We are the best way to check the rarity of NFT collection.</p>
-            <div class="footer_socials_box">
-              <div class="focials_logo_box">
+            <ul class="footer_socials_box">
+              <li class="focials_logo_box">
                 <a href="" class="socials"
                   ><img src="" alt="" class="socials img"
                 /></a>
-              </div>
-              <div class="socials_logo_box">
+              </li>
+              <li class="socials_logo_box">
                 <a href="" class="socials"
                   ><img src="" alt="" class="socials img"
                 /></a>
-              </div>
-              <div class="socials_logo_box">
+              </li>
+              <li class="socials_logo_box">
                 <a href="" class="socials"
                   ><img src="" alt="" class="socials img"
                 /></a>
-              </div>
-              <div class="socials_logo_box">
+              </li>
+              <li class="socials_logo_box">
                 <a href="" class="socials"
                   ><img src="" alt="" class="socials img"
                 /></a>
-              </div>
-              <div class="socials_logo_box">
+              </li>
+              <li class="socials_logo_box">
                 <a href="" class="socials"
                   ><img src="" alt="" class="socials img"
                 /></a>
-              </div>
-            </div>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
